# ADC

./: .gitignore  CMakeLists.txt  main.c
api/: CMakeLists.txt
api/src/API/Challenge/: Manager.c  Manager.h  Service.h
api/src/API/OOP/: Classes.h
challenges/: CMakeLists.txt
challenges/create-device/: CMakeLists.txt
challenges/create-device/src/: main.c
cli/: CMakeLists.txt
cli/src/: loader.c  loader.h  logger.h  main.c  util.c  util.h
cmake/: global-flags.cmake
gui/: CMakeLists.txt
gui/frontend/: index.html  package.json  vite.config.js
gui/frontend/src/: index.vue  main.js  style.css
gui/frontend/src/components/: Flag.vue  FlagSet.vue  Header.vue
gui/frontend/src/styles/: Flag.css  FlagSet.css  Header.css
gui/src/: main.cpp
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs
src/: main.c
